--- a/app/src/main/res/layout/popwindow.xml
+++ b/app/src/main/res/layout/popwindow.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:background="@color/cast_intro_overlay_button_background_color">
-
     <TextView
+        android:padding="10dp"
+        android:textSize="24dp"
         android:text="POP WINDOW"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView" />
-</RelativeLayout>
+        android:id="@+id/txtPopTitle" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:padding="10dp"
+                android:textSize="20dp"
+                android:text="POP WINDOWsdfsdfdsfdfsg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtPopDesc" />
+        </LinearLayout>
+    </ScrollView>
+
+
+</LinearLayout>
